WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126865
Obey "delete this" comments, including deleting String::characters and friends
https://bugs.webkit.org/show_bug.cgi?id=126865
Summary
Obey "delete this" comments, including deleting String::characters and friends
Darin Adler
Reported
2014-01-12 18:34:40 PST
Obey "delete this" comments, including deleting String::characters and friends
Attachments
Patch
(25.11 KB, patch)
2014-01-12 18:37 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(21.95 KB, patch)
2014-01-25 14:55 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(21.31 KB, patch)
2014-02-01 21:03 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(21.59 KB, patch)
2014-02-02 11:12 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(22.04 KB, patch)
2014-02-02 20:59 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2014-01-12 18:37:12 PST
Created
attachment 220998
[details]
Patch
Build Bot
Comment 2
2014-01-12 19:35:21 PST
Comment on
attachment 220998
[details]
Patch
Attachment 220998
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5184853649653760
EFL EWS Bot
Comment 3
2014-01-12 20:00:52 PST
Comment on
attachment 220998
[details]
Patch
Attachment 220998
[details]
did not pass efl-ews (efl): Output:
http://webkit-queues.appspot.com/results/6319781309317120
Build Bot
Comment 4
2014-01-12 20:09:59 PST
Comment on
attachment 220998
[details]
Patch
Attachment 220998
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/4988534721085440
kov's GTK+ EWS bot
Comment 5
2014-01-12 21:08:01 PST
Comment on
attachment 220998
[details]
Patch
Attachment 220998
[details]
did not pass gtk-ews (gtk): Output:
http://webkit-queues.appspot.com/results/4798223378022400
Build Bot
Comment 6
2014-01-12 21:09:13 PST
Comment on
attachment 220998
[details]
Patch
Attachment 220998
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5928938345857024
EFL EWS Bot
Comment 7
2014-01-12 21:58:55 PST
Comment on
attachment 220998
[details]
Patch
Attachment 220998
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/6291465663676416
Darin Adler
Comment 8
2014-01-13 09:52:11 PST
Doing this is blocked by redoing the work in
bug 126854
or at least renaming the call sites to use deprecatedCharacters.
Darin Adler
Comment 9
2014-01-25 14:55:53 PST
Created
attachment 222238
[details]
Patch
Darin Adler
Comment 10
2014-02-01 21:03:59 PST
Created
attachment 222904
[details]
Patch
Darin Adler
Comment 11
2014-02-02 11:12:29 PST
Created
attachment 222928
[details]
Patch
Darin Adler
Comment 12
2014-02-02 20:59:15 PST
Created
attachment 222957
[details]
Patch
WebKit Commit Bot
Comment 13
2014-02-02 21:02:20 PST
Attachment 222957
[details]
did not pass style-queue: ERROR: Source/WTF/wtf/text/WTFString.h:115: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 14
2014-02-02 23:47:52 PST
Comment on
attachment 222957
[details]
Patch Clearing flags on attachment: 222957 Committed
r163289
: <
http://trac.webkit.org/changeset/163289
>
WebKit Commit Bot
Comment 15
2014-02-02 23:47:56 PST
All reviewed patches have been landed. Closing bug.
mitz
Comment 16
2014-02-03 00:01:38 PST
(In reply to
comment #14
)
> (From update of
attachment 222957
[details]
) > Clearing flags on attachment: 222957 > > Committed
r163289
: <
http://trac.webkit.org/changeset/163289
>
This broke builds where ENABLE(DATE_AND_TIME_INPUT_TYPES) is true, such as the iOS build, because BaseDateAndTimeInputType.cpp still uses characters().
Csaba Osztrogonác
Comment 17
2014-02-03 01:10:05 PST
It broke the WinCairo build too: 1>..\..\win\WebDownloadCurl.cpp(184): error C2039: 'characters' : is not a member of 'WTF::String' C:\Projects\BuildSlave\win-cairo-release\build\WebKitBuild\Release_WinCairo\Include\private\wtf/text/WTFString.h(84) : see declaration of 'WTF::String' 1>..\..\win\WebDownloadCurl.cpp(184): error C2664: 'WebCore::BString::BString(const WebCore::BString &)' : cannot convert argument 1 from 'unsigned int' to 'const wchar_t *' Conversion from integral type to pointer type requires reinterpret_cast, C-style cast or function-style cast
Darin Adler
Comment 18
2014-02-03 09:33:23 PST
Basically it broke any build without EWS or a buildbot, which is no surprise!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug