Obey "delete this" comments, including deleting String::characters and friends https://bugs.webkit.org/show_bug.cgi?id=126865

Reviewed by Andreas Kling.

Source/WebCore:

* CMakeLists.txt: Deleted HTMLParserErrorCodes.cpp.
* GNUmakefile.list.am: Deleted HTMLParserErrorCodes.cpp/h, and HTMLParserQuirks.h.
* WebCore.vcxproj/WebCore.vcxproj: Deleted HTMLParserErrorCodes.cpp/h.
* WebCore.vcxproj/WebCore.vcxproj.filters: Ditto.
* WebCore.xcodeproj/project.pbxproj: Ditto.

* html/HTMLParserErrorCodes.cpp: Removed.
* html/HTMLParserErrorCodes.h: Removed.
* html/HTMLParserQuirks.h: Removed.

* rendering/RenderText.h: Deleted the characters function, leaving behind the
deprecatedCharacters function.

Source/WTF:

* wtf/text/AtomicString.h: Deleted the characters function.
* wtf/text/StringBuilder.h: Deleted the characters function, leaving behind the
deprecatedCharacters function.
* wtf/text/StringImpl.h: Ditto.
* wtf/text/WTFString.h: Ditto. Also added a constructor that takes a StringImpl&,
helpful for later string refactoring.


Canonical link: https://commits.webkit.org/146107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163289 268f45cc-cd09-0410-ab3c-d52691b4dbfc